--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,8 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
-      "*": ["src/*", "node_modules/*"],
-      "@/*": [
-        "src/*"
-      ],
+      "*": ["node_modules/*"],
+      "@/*": ["src/*"],
     },
     "jsx": "react",
     "esModuleInterop": true
