--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
-    "lint": "tsdx lint",
-    "publish": "npm publish --access public"
+    "lint": "tsdx lint"
   },
   "peerDependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "tsdx lint",
+      "pre-push": "npm version patch"
     }
   },
   "prettier": {
