--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,8 +28,8 @@ jobs:
       run: npm test
     - name: Build
       run: npm run build
-    - name: Publish
-      run: npm publish --access public
+    # - name: Publish
+    #   run: npm publish --access public
       env:
         CI: true
         NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
