--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
-    "lint": "tsdx lint"
+    "lint": "tsdx lint",
+    "publish": "npm version patch && npm publish --access public"
   },
   "peerDependencies": {},
   "husky": {
