--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@timechimp-bv/helper-functions",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/timechimp-bv/helper-functions.git"
+  },
   "version": "0.1.1",
   "license": "MIT",
   "author": "TimeChimp Dev",
