--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@timechimp-bv/helper-functions",
+  "name": "@timechimp/timechimp-typescript-helpers",
   "repository": {
     "type": "git",
-    "url": "https://github.com/timechimp-bv/helper-functions.git"
+    "url": "https://github.com/timechimp/timechimp-typescript-helpers.git"
   },
   "version": "0.1.8",
   "license": "MIT",
-  "author": "TimeChimp Dev",
+  "author": "TimeChimp",
   "main": "dist/index.js",
-  "module": "dist/helper-functions.esm.js",
+  "module": "dist/timechimp-typescript-helpers.esm.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
@@ -35,15 +35,15 @@
   },
   "devDependencies": {
     "@types/accounting": "^0.4.1",
-    "@types/jest": "^24.0.20",
-    "husky": "^3.0.9",
-    "tsdx": "^0.10.5",
-    "tslib": "^1.10.0",
-    "typescript": "^3.6.4"
+    "@types/jest": "^26.0.20",
+    "husky": "^4.3.7",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "accounting": "^0.4.1",
-    "date-fns": "^2.6.0",
-    "date-fns-tz": "^1.0.8"
+    "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.0.10"
   }
 }
