--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
-    "lint": "tsdx lint",
+    "lint": "tsdx lint src",
+    "lint:fix": "tsdx lint src --fix",
     "publish:npm": "npm run build && npm version patch && npm publish --access public"
   },
   "peerDependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint",
+      "pre-commit": "tsdx lint src",
       "pre-push": "npm version patch"
     }
   },
