--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "git",
     "url": "https://github.com/timechimp/timechimp-typescript-helpers.git"
   },
-  "version": "0.1.15",
+  "version": "0.1.14",
   "license": "MIT",
   "author": "TimeChimp",
   "main": "dist/index.js",
@@ -24,8 +24,7 @@
   "peerDependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint src",
-      "pre-push": "npm version patch"
+      "pre-commit": "tsdx lint src"
     }
   },
   "prettier": {
