--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: NPM publish
+name: Release
 
 on:
   push:
@@ -27,8 +27,21 @@ jobs:
       run: npm test
     - name: Build
       run: npm run build
-    - uses: JS-DevTools/npm-publish@v1
+    - name: Publish
+      id: publish
+      uses: JS-DevTools/npm-publish@v1
       with:
         token: ${{ secrets.NPM_TOKEN }}
+
+    - if: steps.publish.outputs.type != 'none'
+      name: Create release
+      uses: release-drafter/release-drafter@v5.12.1
+      with: 
+        publish: true
+        version: ${{ steps.publish.outputs.version }}
+        tag: ${{ steps.publish.outputs.version }}
+
       env:
         CI: true
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
