--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "git",
     "url": "https://github.com/timechimp/timechimp-typescript-helpers.git"
   },
-  "version": "2.0.4",
+  "version": "3.0.0-beta.1",
   "license": "MIT",
   "author": "TimeChimp",
   "main": "dist/cjs/index.js",
@@ -26,7 +26,8 @@
     "test": "jest --passWithNoTests",
     "lint": "npx eslint --ext .ts,.tsx src/",
     "lint:fix": "npm run lint -- --fix",
-    "release": "npm run build && np --no-2fa"
+    "release": "npm run build && np --no-2fa",
+    "prepare": "husky install"
   },
   "prettier": {
     "printWidth": 80,
@@ -37,9 +38,15 @@
   "devDependencies": {
     "@types/accounting": "^0.4.1",
     "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
     "fs-extra": "^11.1.1",
-    "husky": "^4.3.8",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "np": "^7.5.0",
+    "prettier": "2.8.8",
     "rimraf": "^5.0.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
@@ -47,5 +54,9 @@
   "dependencies": {
     "accounting": "^0.4.1",
     "date-fns": "^2.29.3"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --cache --fix",
+    "*.{ts,tsx,js,css,md}": "prettier --write"
   }
 }
