--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "git",
     "url": "https://github.com/timechimp/timechimp-typescript-helpers.git"
   },
-  "version": "3.0.0-beta.1",
+  "version": "3.0.0",
   "license": "MIT",
   "author": "TimeChimp",
   "main": "dist/cjs/index.js",
