--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "eslint-config-prettier": "^8.8.0",
     "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "np": "^7.5.0",
     "prettier": "2.8.8",
     "rimraf": "^5.0.0",
+    "ts-jest": "^29.1.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   },
