--- a/package.json
+++ b/package.json
@@ -4,28 +4,30 @@
     "type": "git",
     "url": "https://github.com/timechimp/timechimp-typescript-helpers.git"
   },
-  "version": "2.0.4",
+  "version": "3.0.0",
   "license": "MIT",
   "author": "TimeChimp",
-  "main": "dist/index.js",
-  "module": "dist/timechimp-typescript-helpers.esm.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "types": "dist/cjs/index.d.ts",
+  "module": "dist/esm/index.js",
+  "sideEffects": false,
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test",
-    "lint": "tsdx lint src",
-    "lint:fix": "tsdx lint src --fix",
-    "release": "npm run build && np --no-2fa"
-  },
-  "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint src"
-    }
+    "start": "tsc --watch",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
+    "build:esm": "tsc --module esnext --outDir dist/esm",
+    "build:copy-files": "node scripts/copyFiles.mjs",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:copy-files",
+    "test": "jest --passWithNoTests",
+    "lint": "npx eslint --ext .ts,.tsx src/",
+    "lint:fix": "npm run lint -- --fix",
+    "release": "npm run build && np --no-2fa",
+    "prepare": "husky install"
   },
   "prettier": {
     "printWidth": 80,
@@ -36,14 +38,27 @@
   "devDependencies": {
     "@types/accounting": "^0.4.1",
     "@types/jest": "^26.0.20",
-    "husky": "^4.3.8",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "fs-extra": "^11.1.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.2",
     "np": "^7.5.0",
-    "tsdx": "^0.14.1",
+    "prettier": "2.8.8",
+    "rimraf": "^5.0.0",
+    "ts-jest": "^29.1.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "accounting": "^0.4.1",
     "date-fns": "^2.29.3"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --cache --fix",
+    "*.{ts,tsx,js,css,md}": "prettier --write"
   }
 }
